--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>All About Dolphins — Single-file SPA</title>
+    <title>Mount Everest — Single-file SPA</title>
     <style>
-      :root{--bg:#e6f7ff;--card:#ffffff;--accent:#047857;--muted:#475569}
-      html,body{height:100%;margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, Arial;color:#0f1724;background:linear-gradient(180deg,#dff6ff 0%,#e6fbff 100%)}
+      :root{--bg:#f0f9ff;--card:#ffffff;--accent:#0f1724;--muted:#475569}
+      html,body{height:100%;margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, Arial;color:#0f1724;background:linear-gradient(180deg,#eef9ff 0%,#f7fdff 100%)}
       .wrap{min-height:100%;display:flex;align-items:center;justify-content:center;padding:36px}
-      .card{background:var(--card);border:1px solid #e6f0f6;padding:26px;border-radius:12px;max-width:820px;width:100%;box-shadow:0 8px 30px rgba(12,34,56,0.06)}
-      h1{margin:0 0 8px;font-size:30px;color:var(--accent)}
-      h2{margin:18px 0 6px;color:#0f1724}
+      .card{background:var(--card);border:1px solid #e6f0f6;padding:24px;border-radius:12px;max-width:820px;width:100%;box-shadow:0 8px 30px rgba(12,34,56,0.06)}
+      h1{margin:0 0 8px;font-size:28px;color:var(--accent)}
+      h2{margin:14px 0 6px;color:var(--accent)}
       p{margin:0 0 12px;color:var(--muted);line-height:1.5}
       nav{margin-top:12px}
-      a{color:var(--accent);text-decoration:none;margin-right:10px}
+      a{color:#0b6b8f;text-decoration:none;margin-right:10px}
       .footer{margin-top:18px;font-size:13px;color:#64748b}
       ul{margin:8px 0 0;padding-left:20px;color:var(--muted)}
-      .badge{display:inline-block;margin-left:8px;background:#eefafa;color:#024; padding:4px 8px;border-radius:999px;font-size:12px}
+      .badge{display:inline-block;margin-left:8px;background:#eef2ff;color:#071a2b;padding:4px 8px;border-radius:999px;font-size:12px}
     </style>
   </head>
   <body>
@@ -25,39 +25,37 @@
     </div>
 
     <script>
-      // Tiny single-file SPA with two routes: home and dolphins
+      // Single-file SPA: Home and Mount Everest info
       const routes = {
         '': () => `
-          <h1>Welcome — Learn About Dolphins 🐬</h1>
-          <p>Dolphins are intelligent, social marine mammals known for their playful behavior and high learning capacity.</p>
+          <h1>Welcome — Learn About Mount Everest 🏔️</h1>
+          <p>Mount Everest is the highest mountain on Earth above sea level and an icon of exploration and mountaineering.</p>
           <nav>
             <a href="#/">Home</a>
-            <a href="#/dolphins">Dolphin Facts</a>
+            <a href="#/everest">Mount Everest</a>
           </nav>
-          <div class="footer">This is a single-file SPA. Use the links above to navigate.</div>
+          <div class="footer">Use the links to navigate. This is a single-file SPA.</div>
         `,
-        'dolphins': () => `
-          <h1>About Dolphins <span class="badge">Fun Facts</span></h1>
-          <p><strong>Who they are:</strong> Dolphins belong to the family Delphinidae and are relatives of whales and porpoises.</p>
-          <h2>Habitat</h2>
-          <p>They live in oceans and some species live in rivers; commonly found in shallow seas of the continental shelves.</p>
-          <h2>Behavior</h2>
+        'everest': () => `
+          <h1>Mount Everest: Overview <span class="badge">Key Facts</span></h1>
+          <p><strong>Location & Height:</strong> Mount Everest lies on the Nepal–China border. Its officially surveyed height is 8,848.86&nbsp;m (29,031.7&nbsp;ft) as of 2020.</p>
+          <h2>Early Surveys & Name</h2>
+          <p>Known to local Himalayan peoples for centuries, Everest was measured during the 19th-century Great Trigonometric Survey and named after Sir George Everest.</p>
+          <h2>First Confirmed Ascent</h2>
+          <p>Sir Edmund Hillary and Tenzing Norgay reached the summit on May 29, 1953 — a landmark in mountaineering history.</p>
+          <h2>Climbing Challenges</h2>
           <ul>
-            <li>Highly social — live in pods (groups).</li>
-            <li>Use echolocation to find food and navigate.</li>
-            <li>Show complex play, teaching, and cooperative hunting.</li>
+            <li>Extreme altitude and the "death zone" above 8,000&nbsp;m.</li>
+            <li>Severe weather, avalanches, and crevasses.</li>
+            <li>Logistics: permits, guides, and acclimatization schedules.</li>
           </ul>
-          <h2>Interesting Facts</h2>
-          <ul>
-            <li>They can recognize themselves in mirrors (a sign of self-awareness).</li>
-            <li>Some species can swim over 20 mph (32 kph).</li>
-            <li>Communication includes clicks, whistles, and body language.</li>
-          </ul>
+          <h2>Modern Issues</h2>
+          <p>In recent decades, increased traffic, environmental concerns, and safety controversies have drawn attention to sustainable and ethical climbing practices.</p>
           <nav>
             <a href="#/">Home</a>
-            <a href="#/dolphins">Dolphin Facts</a>
+            <a href="#/everest">Mount Everest</a>
           </nav>
-          <div class="footer">Hash route: <code>#/dolphins</code></div>
+          <div class="footer">Hash route: <code>#/everest</code></div>
         `
       };
 
