Add ghost content: update index.html on ghosts branch

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Mount Everest — Single-file SPA</title>
+    <title>All About Ghosts — Single-file SPA</title>
     <style>
-      :root{--bg:#f0f9ff;--card:#ffffff;--accent:#0f1724;--muted:#475569}
-      html,body{height:100%;margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, Arial;color:#0f1724;background:linear-gradient(180deg,#eef9ff 0%,#f7fdff 100%)}
+      :root{--bg:#f7f7fb;--card:#ffffff;--accent:#0b1220;--muted:#475569}
+      html,body{height:100%;margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, Arial;color:#0b1220;background:linear-gradient(180deg,#fbfbff 0%,#f7f7ff 100%)}
       .wrap{min-height:100%;display:flex;align-items:center;justify-content:center;padding:36px}
-      .card{background:var(--card);border:1px solid #e6f0f6;padding:24px;border-radius:12px;max-width:820px;width:100%;box-shadow:0 8px 30px rgba(12,34,56,0.06)}
+      .card{background:var(--card);border:1px solid #eef0f6;padding:24px;border-radius:12px;max-width:820px;width:100%;box-shadow:0 8px 30px rgba(2,6,23,0.06)}
       h1{margin:0 0 8px;font-size:28px;color:var(--accent)}
       h2{margin:14px 0 6px;color:var(--accent)}
       p{margin:0 0 12px;color:var(--muted);line-height:1.5}
@@ -16,7 +16,7 @@
       a{color:#0b6b8f;text-decoration:none;margin-right:10px}
       .footer{margin-top:18px;font-size:13px;color:#64748b}
       ul{margin:8px 0 0;padding-left:20px;color:var(--muted)}
-      .badge{display:inline-block;margin-left:8px;background:#eef2ff;color:#071a2b;padding:4px 8px;border-radius:999px;font-size:12px}
+      .badge{display:inline-block;margin-left:8px;background:#f1eefb;color:#1b0b2f;padding:4px 8px;border-radius:999px;font-size:12px}
     </style>
   </head>
   <body>
@@ -25,37 +25,37 @@
     </div>
 
     <script>
-      // Single-file SPA: Home and Mount Everest info
+      // Single-file SPA: Home and Ghosts info
       const routes = {
         '': () => `
-          <h1>Welcome — Learn About Mount Everest 🏔️</h1>
-          <p>Mount Everest is the highest mountain on Earth above sea level and an icon of exploration and mountaineering.</p>
+          <h1>Welcome — Curious About Ghosts? 👻</h1>
+          <p>Ghosts are figures in folklore, religion, and popular culture usually described as the spirits or souls of the dead.</p>
           <nav>
             <a href="#/">Home</a>
-            <a href="#/everest">Mount Everest</a>
+            <a href="#/ghosts">Ghosts</a>
           </nav>
-          <div class="footer">Use the links to navigate. This is a single-file SPA.</div>
+          <div class="footer">This page summarizes cultural perspectives and common ideas about ghosts.</div>
         `,
-        'everest': () => `
-          <h1>Mount Everest: Overview <span class="badge">Key Facts</span></h1>
-          <p><strong>Location & Height:</strong> Mount Everest lies on the Nepal–China border. Its officially surveyed height is 8,848.86&nbsp;m (29,031.7&nbsp;ft) as of 2020.</p>
-          <h2>Early Surveys & Name</h2>
-          <p>Known to local Himalayan peoples for centuries, Everest was measured during the 19th-century Great Trigonometric Survey and named after Sir George Everest.</p>
-          <h2>First Confirmed Ascent</h2>
-          <p>Sir Edmund Hillary and Tenzing Norgay reached the summit on May 29, 1953 — a landmark in mountaineering history.</p>
-          <h2>Climbing Challenges</h2>
+        'ghosts': () => `
+          <h1>About Ghosts <span class="badge">Folklore & Facts</span></h1>
+          <p><strong>What people mean by "ghosts":</strong> often the perceived presence or apparition of a deceased person, reported across many cultures and historical periods.</p>
+          <h2>Historical & Cultural Views</h2>
+          <p>Beliefs about spirits date back millennia—ancient civilizations had rituals to honor the dead, and many cultures developed ghost stories to explain the unknown.</p>
+          <h2>Common Themes</h2>
           <ul>
-            <li>Extreme altitude and the "death zone" above 8,000&nbsp;m.</li>
-            <li>Severe weather, avalanches, and crevasses.</li>
-            <li>Logistics: permits, guides, and acclimatization schedules.</li>
+            <li>Apparitions, poltergeist activity, and hauntings are frequent motifs.</li>
+            <li>Many accounts involve unfinished business, tragic death, or locations with strong emotional history.</li>
+            <li>Cultural context shapes how ghost experiences are interpreted (religious, psychological, or supernatural explanations).</li>
           </ul>
-          <h2>Modern Issues</h2>
-          <p>In recent decades, increased traffic, environmental concerns, and safety controversies have drawn attention to sustainable and ethical climbing practices.</p>
+          <h2>Scientific Perspective</h2>
+          <p>Researchers often attribute experiences to sleep paralysis, perception biases, environmental factors (infrasound, mold), or the brain's pattern-seeking under stress. Scientific methods seek natural explanations rather than paranormal causation.</p>
+          <h2>Ghosts in Media</h2>
+          <p>Ghosts are popular in literature, film, and television—used for horror, mystery, or emotional storytelling.</p>
           <nav>
             <a href="#/">Home</a>
-            <a href="#/everest">Mount Everest</a>
+            <a href="#/ghosts">Ghosts</a>
           </nav>
-          <div class="footer">Hash route: <code>#/everest</code></div>
+          <div class="footer">Hash route: <code>#/ghosts</code></div>
         `
       };
 
