--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>All About Ghosts — Single-file SPA</title>
+    <title>Taco Fiesta — Single-file SPA</title>
     <style>
-      :root{--bg:#f7f7fb;--card:#ffffff;--accent:#0b1220;--muted:#475569}
-      html,body{height:100%;margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, Arial;color:#0b1220;background:linear-gradient(180deg,#fbfbff 0%,#f7f7ff 100%)}
+      :root{--bg:#fff8f0;--card:#ffffff;--accent:#b91c1c;--muted:#475569}
+      html,body{height:100%;margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, Arial;color:#0b1220;background:linear-gradient(180deg,#fff4eb 0%,#fff8f0 100%)}
       .wrap{min-height:100%;display:flex;align-items:center;justify-content:center;padding:36px}
-      .card{background:var(--card);border:1px solid #eef0f6;padding:24px;border-radius:12px;max-width:820px;width:100%;box-shadow:0 8px 30px rgba(2,6,23,0.06)}
+      .card{background:var(--card);border:1px solid #fff0ea;padding:24px;border-radius:12px;max-width:820px;width:100%;box-shadow:0 8px 30px rgba(12,34,56,0.06)}
       h1{margin:0 0 8px;font-size:28px;color:var(--accent)}
       h2{margin:14px 0 6px;color:var(--accent)}
       p{margin:0 0 12px;color:var(--muted);line-height:1.5}
       nav{margin-top:12px}
-      a{color:#0b6b8f;text-decoration:none;margin-right:10px}
+      a{color:#b91c1c;text-decoration:none;margin-right:10px}
       .footer{margin-top:18px;font-size:13px;color:#64748b}
       ul{margin:8px 0 0;padding-left:20px;color:var(--muted)}
-      .badge{display:inline-block;margin-left:8px;background:#f1eefb;color:#1b0b2f;padding:4px 8px;border-radius:999px;font-size:12px}
+      .badge{display:inline-block;margin-left:8px;background:#fff0f0;color:#4b0505;padding:4px 8px;border-radius:999px;font-size:12px}
     </style>
   </head>
   <body>
@@ -25,37 +25,36 @@
     </div>
 
     <script>
-      // Single-file SPA: Home and Ghosts info
+      // Single-file SPA: Home and Taco info
       const routes = {
         '': () => `
-          <h1>Welcome — Curious About Ghosts? 👻</h1>
-          <p>Ghosts are figures in folklore, religion, and popular culture usually described as the spirits or souls of the dead.</p>
+          <h1>Welcome — Taco Fiesta 🌮</h1>
+          <p>Tacos are a traditional Mexican dish consisting of a folded or rolled tortilla filled with various ingredients.</p>
           <nav>
             <a href="#/">Home</a>
-            <a href="#/ghosts">Ghosts</a>
+            <a href="#/tacos">Tacos</a>
           </nav>
-          <div class="footer">This page summarizes cultural perspectives and common ideas about ghosts.</div>
+          <div class="footer">This page gives a quick taco primer — explore the varieties!</div>
         `,
-        'ghosts': () => `
-          <h1>About Ghosts <span class="badge">Folklore & Facts</span></h1>
-          <p><strong>What people mean by "ghosts":</strong> often the perceived presence or apparition of a deceased person, reported across many cultures and historical periods.</p>
-          <h2>Historical & Cultural Views</h2>
-          <p>Beliefs about spirits date back millennia—ancient civilizations had rituals to honor the dead, and many cultures developed ghost stories to explain the unknown.</p>
-          <h2>Common Themes</h2>
+        'tacos': () => `
+          <h1>About Tacos <span class="badge">Delicious Facts</span></h1>
+          <p><strong>Origins:</strong> Tacos have roots in Mexico and likely date back to indigenous peoples who used tortillas to hold fillings.</p>
+          <h2>Common Types</h2>
           <ul>
-            <li>Apparitions, poltergeist activity, and hauntings are frequent motifs.</li>
-            <li>Many accounts involve unfinished business, tragic death, or locations with strong emotional history.</li>
-            <li>Cultural context shapes how ghost experiences are interpreted (religious, psychological, or supernatural explanations).</li>
+            <li><strong>Al Pastor:</strong> Marinated pork cooked on a vertical spit, served with pineapple.</li>
+            <li><strong>Carne Asada:</strong> Grilled beef, often chopped and served with onion and cilantro.</li>
+            <li><strong>Barbacoa:</strong> Slow-cooked, seasoned meat (beef, lamb, or goat).</li>
+            <li><strong>Fish/Shrimp:</strong> Often battered or grilled, popular in coastal regions.</li>
           </ul>
-          <h2>Scientific Perspective</h2>
-          <p>Researchers often attribute experiences to sleep paralysis, perception biases, environmental factors (infrasound, mold), or the brain's pattern-seeking under stress. Scientific methods seek natural explanations rather than paranormal causation.</p>
-          <h2>Ghosts in Media</h2>
-          <p>Ghosts are popular in literature, film, and television—used for horror, mystery, or emotional storytelling.</p>
+          <h2>How to Serve</h2>
+          <p>Serve on corn or flour tortillas with toppings: salsa, lime, onion, cilantro, and your favorite hot sauce.</p>
+          <h2>Regional Variations</h2>
+          <p>Different regions in Mexico and the U.S. have unique styles and toppings — street tacos are typically simple, while plated tacos can be elaborate.</p>
           <nav>
             <a href="#/">Home</a>
-            <a href="#/ghosts">Ghosts</a>
+            <a href="#/tacos">Tacos</a>
           </nav>
-          <div class="footer">Hash route: <code>#/ghosts</code></div>
+          <div class="footer">Hash route: <code>#/tacos</code></div>
         `
       };
 
